# paykit

./: .dockerignore  .gitignore  DEMO_SCRIPT.md  MIGRATION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: config.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
apps/api/e2e/: happy-path.mjs
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts  telemetry.ts
apps/api/src/api/: index.ts
apps/web/: .env.example  .env.production  .gitignore  README.md  instrumentation.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/hooks/: use-api-key.ts
apps/web/lib/: cookies.ts  paykit-client.ts  stellar-explorer.ts  types.ts
apps/web/public/: sdk.js
contracts/: package.json
contracts/spending-policy/: .env.testnet  .gitignore  Cargo.toml  package.json
contracts/spending-policy/scripts/: deploy.ts
contracts/spending-policy/src/: contract.rs  lib.rs  logic.rs  test.rs
paykit-core/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
paykit-core/src/: index.ts
paykit-core/src/api/: index.ts
paykit-core/src/auth/: jwt.ts
paykit-core/src/chains/: StellarAdapter.ts  index.ts  types.ts
paykit-core/src/config/: index.ts
paykit-core/src/database/: connection.ts  seedPlans.ts
paykit-core/src/merchant/: merchantService.ts
paykit-core/src/payments/: paymentService.ts  payoutService.ts
paykit-sdk/: README.md  package-lock.json  package.json
paykit-sdk/src/: index.ts
(+215 files in other folders)
