[package]
name = "paykit-spending-policy"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "PayKit spending policy — OpenZeppelin Smart Account Policy extension"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "25.3.0"
stellar-accounts = "0.7.1"

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
